  * new feature: MAKE-HASH-TABLE now experimentally accepts a
    :SYNCHRONIZED argument, which makes the hash-table safe for
    concurrent accesses (but not iteration.) See also:
    SB-EXT:WITH-LOCKED-HASH-TABLE, and
    SB-EXT:HASH-TABLE-SYNCHRONIZED-P.
  * optimization: CONCATENATE on strings is an order of magnitue faster
    in code compiled with (> SPEED SPACE).
  * bug fix: SB-PROFILE will no longer report extra consing for nested
    calls to profiled functions.
  * bug fix: ROOM implementation had bogus fixnum declarations which
    could cause type-errors when calling ROOM on large images.
  * bug fix: if file compilation is aborted, the partial fasl is now
    deleted, and COMPILE-FILE returns NIL as the primary value.
  * bug fix: number of thread safety issues relating to SBCL's internal
    hash-table usage have been fixed.
  * bug fix: SB-SYS:WITH-PINNED-OBJECTS could cause garbage values to
    be returned from its body when the values were being returned
    using unknown-values return convection and the W-P-O was wrapped
    inside an UNWIND-PROTECT.
  * bug fix: sb-posix should now compile again under Windows, enabling
    slime to work again.

changes in sbcl-1.0.11 relative to sbcl-1.0.10:
  * incompatible change: hash-table accessor functions are no longer
    automatically protected by locks. Concurrent accesses on the same hash-table
    from multiple threads can give inconsistent results or even corrupt the
    hash-table completely. Multi-threaded applications should do their own
    locking at the correct granularity. In the current implementation it is
    still safe to have multiple readers access the same table, but it's not
    guaranteed that this property will be maintained in future releases.
  * minor incompatible change: (SETF MUTEX-VALUE) is not longer supported,
    and will signal an error at runtime.
  * enhancement: SB-THREAD package now exports a semaphore interface.
  * enhancement: CONS can now stack-allocate on x86 and