@@ -1318,7 +1318,9 @@ is a good idea, but see SB-SYS re. blurring of boundaries."
                "LAYOUT-N-UNTAGGED-SLOTS" "LAYOUT-FOR-STD-CLASS-P"
                "LAYOUT-SLOT-TABLE"
                #!+(or x86-64 x86) "%LEA"
-               "LEXENV" "LEXENV-DESIGNATOR" "LINE-LENGTH" "ANSI-STREAM"
+               "LEXENV" "LEXENV-DESIGNATOR" "LINE-LENGTH"
+               "LIST-SUBSEQ*"
+               "ANSI-STREAM"
                "ANSI-STREAM-BIN" "ANSI-STREAM-BOUT" "ANSI-STREAM-CLOSE"
                "ANSI-STREAM-ELEMENT-TYPE" "ANSI-STREAM-IN"
                "ANSI-STREAM-IN-BUFFER" "ANSI-STREAM-IN-INDEX"
